--- a/JSDay3Exercises.html
+++ b/JSDay3Exercises.html
@@ -5,13 +5,15 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <style>
+    </style>
 </head>
 <body>
     <div class="container">
         <div class="row">
-            <div class="col-lg-4 exercise1"><p id="basic1F1">+</p></div>
-            <div class="col-lg-4 exercise1"><p id="basic1F2">+</p></div>
-            <div class="col-lg-4 exercise1"><p id="basic1F3">+</p></div>
+            <div class="col-sm-12 exercise1"><p id="basic1F1">+</p></div>
+            <div class="col-sm-12 exercise1"><p id="basic1F2">+</p></div>
+            <div class="col-sm-12 exercise1"><p id="basic1F3">+</p></div>
         </div>
         <div class="row">
             <div class="col-4 exercise1"><p id="basic2F1">+</p></div>
@@ -25,30 +27,41 @@
         </div>
     </div>
     <script>
-        //Basic 1
+        //Basic 1 and 3
         //create a program. whether the temperatur is is cold (-5, 10) or (11, 25) moderate.
-        var randomTemp = Math.floor(((Math.random() * 26) - 5));
+        var randomTemp = Math.floor(((Math.random() * 39) - 5));
             document.getElementById("basic1F1").innerHTML = randomTemp;
         if (randomTemp <= 10) {
             document.getElementById("basic1F2").innerHTML = "The weather is cold";
-        } else { 
-            document.getElementById("basic1F3").innerHTML = "The weather is warm";
+            var img = document.createElement("img");
+            img.src = "https://cdn.pixabay.com/photo/2017/01/06/23/09/tree-1959267_960_720.jpg";
+            document.getElementById("basic1F3").appendChild(img);
+        } else if (randomTemp >= 32) { 
+            document.getElementById("basic1F2").innerHTML = "The weather is hot";
+            var img = document.createElement("img")
+            img.src = "https://cdn.pixabay.com/photo/2016/03/23/15/00/ice-cream-1274894_960_720.jpg";
+            document.getElementById("basic1F3").appendChild(img);
+        } else {
+            document.getElementById("basic1F2").innerHTML = "The weather is warm";
+            var img = document.createElement("img")
+            img.src = "https://cdn.pixabay.com/photo/2014/12/04/14/46/magnolia-trees-556718_960_720.jpg";
+            document.getElementById("basic1F3").appendChild(img);
         }
 
         // Basic 2
         // create loop to select highest number of array
 
-        var numbersMax = [1, 7, -3, 9];
-        // let max = numbersMax[0];
-        // for (var index of numbersMax){
-        //     if (numbersMax[index] > max){
-        //         max = numbersMax[index];
+        var numbersMax = [1, 7, -3, 4];
+        var startInt = numbersMax[0];
 
-        //     }
-        // document.getElementById("basic2F1").innerHTML = max;
-        // }
+        for (var anyInteger of numbersMax) {
+            if (anyInteger > startInt) {
+                startInt = anyInteger;
+            }
+            document.getElementById("basic2F1").innerHTML = startInt;
+        }
 
-
+        //another way of doing it
         var a = numbersMax[0];
         var b = numbersMax[1];
         var c = numbersMax[2];
@@ -69,7 +82,9 @@
         else if ((d > b) && (d > c) && (d > a)){
             max = d;
         }
-        document.getElementById("basic2F1").innerHTML = max;
+        document.getElementById("basic2F3").innerHTML = max;
+
+
 
     </script>
 </body>
